# laos_teacher

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  requirements.txt
backend/app/: __init__.py  config.py  logging_utils.py  main.py
backend/app/middleware/: __init__.py  request_logging.py
backend/app/models/: schemas.py
backend/app/services/: asr.py  llm.py  nlp.py  srs.py  translation.py  tts.py  tutor.py  vad.py
backend/app/static/css/: styles.css
backend/app/static/js/: app.js
backend/app/templates/: index.html
backend/tests/: __init__.py  test_health.py
docs/: stack_plan.md
