[project]
name = "lao-teacher"
version = "0.1.0"
description = "Local-first Lao language voice tutor"
authors = [{name = "Lao Tutor"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi>=0.119,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=1.10,<2.0",
  "numpy>=1.24,<2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
speech = [
  "faster-whisper>=1.0,<2.0",
  "ctranslate2>=4.6,<5.0",
  "webrtcvad-wheels>=2.0,<3.0",
  "onnxruntime>=1.18,<2.0",
  "sounddevice>=0.4,<0.5",
  "soundfile>=0.12,<0.13",
  "librosa>=0.10,<0.11",
  "praat-parselmouth>=0.4,<0.5",
  "sentence-transformers>=3.0,<4.0",
  "laonlp>=0.4,<0.5",
]
dev = [
  "pytest>=8.0,<9.0",
]
